# baalda

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  TRADEMARK.md  railway.json
.claude/skills/relaunch/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
app/: package-lock.json  package.json
app/apps/desktop/: index.html  package.json  vitest.config.ts
app/apps/desktop/src/: App.css  App.tsx  main.tsx  store.ts
app/apps/desktop/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
app/apps/desktop/src-tauri/capabilities/: default.json
app/apps/desktop/src-tauri/icons/: icon.icns
app/apps/desktop/src-tauri/src/: attachments.rs  commands.rs  error.rs  import_export.rs  index.rs  keychain.rs  lib.rs  notefile.rs  oauth.rs  parse.rs  state.rs  tree.rs  vault.rs  watcher.rs
app/apps/desktop/src-tauri/src/assets/: wordmark-ink.datauri
app/apps/desktop/src-tauri/tests/: index_integration.rs
app/apps/server/: .env.example  Dockerfile  README.md  docker-compose.yml  package.json  tsconfig.json  vitest.config.ts
app/apps/server/migrations/: 001_better_auth.sql  002_app_tables.sql  (+10 more)
docs/: BRANDING.md  Baalda.md  DEPLOY.md  OpenContext.md  RELEASE.md  STATUS.md
docs/specs/: 00-architecture-overview.md  01-desktop-app.md  02-database-architecture.md  03-sync-engine.md  04-team-collaboration.md  05-vault-sync-engine.md  REQUIREMENTS.md
ee/: LICENSE  README.md
(+181 files in other folders)
