[package]
name = "desktop"
version = "0.1.0"
description = "OpenContext — local-first markdown app"
authors = ["OpenContext"]
edition = "2021"

[lib]
# The `_lib` suffix keeps the lib name unique so it doesn't conflict with the
# bin name (an issue on Windows — see rust-lang/cargo#8519).
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
rusqlite = { version = "0.32", features = ["bundled"] }
notify = "8"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
walkdir = "2"
regex = "1"
once_cell = "1"
# OS keychain for session tokens (spec 04 §7). apple-native uses the macOS
# Security framework; swap/add features for other platforms later.
keyring = { version = "3", features = ["apple-native"] }

# The updater is desktop-only — gate it so mobile targets don't try to build it.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[dev-dependencies]
tempfile = "3"
